--- a/style.css
+++ b/style.css
@@ -3,23 +3,52 @@
     text-align: center;
     position: absolute;
     margin-left: 650px;
-    margin-top: 130px;
+    margin-top: 200px;
 }
 
 h1 {
     text-align: center;
     font-family: arial;
     font-style: oblique;
+    margin-top: 100px;
+    padding-bottom: 100px
+
 
 }
 
 .lucian {
     text-align: center;
-    float: center
+    float: center;
+
+    margin-left: 50px
 }
 
-h3 {
-    margin-top: 400px;
+.ninus {
+    margin-top: 450px;
+    font-family: arial;
+    padding-bottom: 40px
+
+}
+
+p {
+    font-family: arial;
+    padding-bottom: 25px
+}
+
+ul {
+    font-family: arial;
+
+}
+
+
+.papa{
+    padding-top: 25px;
+
+
+}
+
+
+.oklm {
     font-family: arial;
 
 }
